qsk-macros/tests/fail/tap-toggle-unexpected-arguments.stderr
error: unexpected argument
 --> tests/fail/tap-toggle-unexpected-arguments.rs:6:43
  |
6 |             F -> TapToggle(Navigation, F, MEOW),
  |                                           ^^^^
